--- a/src/components/Cart/ProductInCart/ProductInCart.css
+++ b/src/components/Cart/ProductInCart/ProductInCart.css
@@ -11,7 +11,6 @@
     align-items: center;
 
     position: relative;
-
   }
   
   .cart-product-container img {
@@ -19,9 +18,10 @@
   }
   
   .cart-product-container .details {
+    width: 90%;
     padding-top: 10px;
     padding-bottom: 10px;
-    width: 90%;
+    
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -42,14 +42,13 @@
   .cart-product-container .remove-cart {
     cursor: pointer;
     background-color: transparent;
-    border: none;
     color: red;
+    border: none;
   
-    width: 40px;
-    height: 40px;
-    font-size: 25px;
-    line-height: 15px;
-
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 1.5rem;
+    line-height: 0.875rem;
   }
   
   .cart-product-container .remove-cart:hover {
@@ -61,15 +60,13 @@
     background-color: red;
     color: white;
 
-
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     border-radius: 50%;
     text-align: center;
   
     position: absolute;
     top: 10px;
     right: 13px;
-
   }
   
