--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,9 @@
 .header {
   background-color: #fff159;
-  position: fixed;
-
+  
   width: 100%;
+  
+  position: fixed;
 
   display: flex;
   justify-content: center;
@@ -11,8 +12,9 @@
 
 .container {
   background-color: #fff159;
-  width: 700px;
-  padding: 20px;
+
+  width: 43.75rem;
+  padding: 1.25rem;
 
   display: flex;
   justify-content: space-between;
@@ -24,7 +26,7 @@
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
 
   width: 100%;
-  max-width: 500px;
+  max-width: 31.25rem;
 
   display: flex;
   justify-content: center;
@@ -35,7 +37,7 @@
   border-right: 1px solid #ddd;
   outline: none;
 
-  padding: 15px;
+  padding: 1rem;
   font-size: 1rem;
   font-weight: 400;
 
@@ -48,7 +50,7 @@
   border: none;
   color: #333;
 
-  padding: 15px;
+  padding: 1rem;
   font-size: 1rem;
 
   display: flex;
@@ -65,7 +67,7 @@
   background-color: transparent;
   border: none;
 
-  margin-left: 10px;
+  margin-left: 0.625rem;
 
   position: relative;
 
@@ -78,12 +80,12 @@
   background-color: red;
   color: white;
 
-  width: 15px;
-  height: 15px;
+  width: 1rem;
+  height: 1rem;
 
   border-radius: 50%;
-  font-size: 12px;
-  line-height: 15px;
+  font-size: 0.9rem;
+  line-height: 1.1rem;
 
   position: absolute;
   top: -5px;
@@ -97,19 +99,19 @@
 @media screen and (max-width: 480px) {
   .container {
     width: 100%;
-    margin-right: 5px;
+    margin-right: 0.25rem;
   }
 
   .search-bar {
-    width: 300px;
+    width: 18.75rem;
   }
 
   .search-bar input[type="search"] {
-    padding: 10px;
+    padding: 0.625rem;
   }
 
   .search-bar button {
-    padding: 5px;
+    padding: 0.375rem;
   }
   
 }
