--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -1,12 +1,14 @@
 .loading {
-  display: none;
-  align-items: center;
-  justify-content: center;
-  font-size: 50px;
   animation: spin 1s linear infinite;
+  
+  font-size: 3.2rem;
 
   position: absolute;
   top: 0;
+
+  display: none;
+  align-items: center;
+  justify-content: center;
 }
 
 @keyframes spin {
